--- a/notebooks/singletons_counts-checkpoint.ipynb
+++ b/notebooks/singletons_counts-checkpoint.ipynb
@@ -389,9 +389,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'hl' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-78d60e33823a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;31m#    mt_trios.consequence == \"synonymous_variant\"))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#Filtered mt with the above filter AC <=2 and synonymous variants only\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m mt_filtered = hl.read_matrix_table(\n\u001b[0m\u001b[1;32m      5\u001b[0m         f'{lustre_dir}/variant_qc/MegaWESSanger_cohorts_AC_synonymous_filtered.mt')\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'hl' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#mt_filtered = mt_trios.filter_rows((mt_trios.info.AC[0] <= 2) & (\n",
     "    #    mt_trios.consequence == \"synonymous_variant\"))\n",
