--- a/notebooks/Untitled2.ipynb
+++ b/notebooks/Untitled2.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "c5e8d2ba",
    "metadata": {},
    "outputs": [
     {
@@ -15,13 +16,13 @@
       "    spark.jars=HAIL_DIR/hail-all-spark.jar\n",
       "    spark.driver.extraClassPath=HAIL_DIR/hail-all-spark.jar\n",
       "    spark.executor.extraClassPath=./hail-all-spark.jarRunning on Apache Spark version 2.4.7\n",
-      "SparkUI available at http://spark-master:4041\n",
+      "SparkUI available at http://spark-master:4040\n",
       "Welcome to\n",
       "     __  __     <>__\n",
       "    / /_/ /__  __/ /\n",
       "   / __  / _ `/ / /\n",
       "  /_/ /_/\\_,_/_/_/   version 0.2.62-84fa81b9ea3d\n",
-      "LOGGING: writing to /home/ubuntu/data/scripts/exomeQC-hail-gnomad/notebooks/hail-20210616-1055-0.2.62-84fa81b9ea3d.log\n"
+      "LOGGING: writing to /home/ubuntu/data/scripts/exomeQC-hail-gnomad/notebooks/hail-20210611-1528-0.2.62-84fa81b9ea3d.log\n"
      ]
     },
     {
@@ -341,27 +342,38 @@
     }
    ],
    "source": [
+    "from hail import Table\n",
     "import os\n",
+    "import pprint\n",
+    "from pprint import pformat\n",
+    "import argparse\n",
     "import hail as hl\n",
-    "import pyspark\n",
-    "import bokeh\n",
-    "import logging\n",
-    "import random\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from scipy import stats\n",
-    "import pickle \n",
+    "import pyspark\n",
+    "from pprint import pformat\n",
+    "import json\n",
+    "import sys\n",
+    "import re\n",
+    "from pathlib import Path\n",
+    "import logging\n",
+    "from typing import Any, Counter, List, Optional, Tuple, Union, Dict,Set\n",
+    "import uuid\n",
+    "import json\n",
     "from matplotlib import pyplot as plt\n",
     "from typing import Any, Counter, List, Optional, Tuple, Union,Dict,Set\n",
     "from hail.plot import show, output_notebook\n",
-    "from bokeh.palettes import d3  # pylint: disable=no-name-in-module\n",
-    "from bokeh.models import Plot, Row, Span, NumeralTickFormatter, LabelSet\n",
     "from gnomad.utils.plotting import *\n",
     "from typing import Set, Tuple\n",
-    "\n",
+    "from bokeh.palettes import d3  # pylint: disable=no-name-in-module\n",
+    "from bokeh.models import Plot, Row, Span, NumeralTickFormatter, LabelSet\n",
+    "import warnings; \n",
+    "warnings.simplefilter('ignore')\n",
     "tmp_dir = \"hdfs://spark-master:9820/\"\n",
     "temp_dir = \"file:///home/ubuntu/data/tmp\"\n",
-    "plot_dir = \"/home/ubuntu/data/tmp\"\n",
+    "#plot_dir = \"/home/ubuntu/data/tmp\"\n",
+    "plot_dir=\"/lustre/scratch123/teams/hgi/mercury/megaWES-variantqc\"\n",
+    "lustre_dir = \"file:///lustre/scratch123/teams/hgi/mercury/megaWES-variantqc\"\n",
     "\n",
     "sc = pyspark.SparkContext()\n",
     "hadoop_config = sc._jsc.hadoopConfiguration()\n",
@@ -369,69 +381,96 @@
     "hadoop_config.set(\"fs.s3a.secret.key\", \"P8vePa7JUvxKXX2me9ti1cGujgYWMoimAwx4mMlM\")\n",
     "hadoop_config.set(\"fs.gs.impl\", \"com.google.cloud.hadoop.fs.gcs.GoogleHadoopFileSystem\")\n",
     "hadoop_config.set(\"fs.AbstractFileSystem.gs.impl\", \"com.google.cloud.hadoop.fs.gcs.GoogleHadoopFS\")\n",
-    "hl.init(sc=sc, tmp_dir=tmp_dir, default_reference='GRCh38')\n",
-    "output_notebook()\n",
-    "logging.basicConfig(format=\"%(levelname)s (%(name)s %(lineno)s): %(message)s\")\n",
-    "logger = logging.getLogger(__name__)\n",
-    "logger.setLevel(logging.INFO)"
+    "hl.init(sc=sc, tmp_dir=lustre_dir, local_tmpdir=lustre_dir, default_reference=\"GRCh38\")\n",
+    "output_notebook()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "873c1ff2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "synonymous=\"s3a://gnomad-training-sets/synonymous_variants_hg38.txt\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-06-16 10:56:30 Hail: INFO: Reading table to impute column types\n"
-     ]
-    }
-   ],
-   "source": [
-    "ht_synonymous=hl.import_table(synonymous,impute=True, no_header=True)\n",
-    "#vt = t.annotate(sample = t.f0.split(\"_\")[1]).key_by('sample')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mt = hl.read_matrix_table(\n",
-    "        f'{temp_dir}/ddd-elgh-ukbb/variant_qc/Sanger_cohorts_family_stats.mt')"
+    "run_hash = \"ae281191\"\n",
+    "ht=hl.read_table(f'{lustre_dir}/variant_qc/models/{run_hash}_rf_result_FINAL_for_RANKING.ht')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "115e6cb2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--------------------------------------------------------\n",
-      "Type:\n",
-      "        struct {\n",
+      "----------------------------------------\n",
+      "Global fields:\n",
+      "    'feature_medians': dict<tuple (\n",
+      "        str\n",
+      "    ), struct {\n",
+      "        qual: float64, \n",
+      "        AN: int32, \n",
+      "        BaseQRankSum: float64, \n",
+      "        DP: int32, \n",
+      "        END: int32, \n",
+      "        ExcessHet: float64, \n",
+      "        FS: float64, \n",
+      "        MQ: float64, \n",
+      "        MQRankSum: float64, \n",
+      "        QD: float64, \n",
+      "        ReadPosRankSum: float64, \n",
+      "        SOR: float64, \n",
+      "        n_alt_alleles: int32\n",
+      "    }> \n",
+      "    'variants_by_strata': dict<tuple (\n",
+      "        str\n",
+      "    ), int64> \n",
+      "    'features_importance': dict<str, float64> \n",
+      "    'features': array<str> \n",
+      "    'test_results': array<struct {\n",
+      "        rf_prediction: str, \n",
+      "        rf_label: str, \n",
+      "        n: int32\n",
+      "    }> \n",
+      "    'rf_hash': str \n",
+      "----------------------------------------\n",
+      "Row fields:\n",
+      "    'locus': locus<GRCh38> \n",
+      "    'alleles': array<str> \n",
+      "    'rsid': str \n",
+      "    'qual': float64 \n",
+      "    'filters': set<str> \n",
+      "    'AC': array<int32> \n",
+      "    'AF': array<float64> \n",
+      "    'AN': int32 \n",
+      "    'AS_BaseQRankSum': array<float64> \n",
+      "    'AS_FS': array<float64> \n",
+      "    'AS_InbreedingCoeff': array<float64> \n",
+      "    'AS_MQ': array<float64> \n",
+      "    'AS_MQRankSum': array<float64> \n",
+      "    'AS_QD': array<float64> \n",
+      "    'AS_ReadPosRankSum': array<float64> \n",
+      "    'AS_SOR': array<float64> \n",
+      "    'BaseQRankSum': float64 \n",
+      "    'DB': bool \n",
+      "    'DP': int32 \n",
+      "    'DS': bool \n",
+      "    'END': int32 \n",
+      "    'ExcessHet': float64 \n",
+      "    'FS': float64 \n",
+      "    'InbreedingCoeff': float32 \n",
+      "    'MLEAC': array<int32> \n",
+      "    'MLEAF': array<float64> \n",
+      "    'MQ': float64 \n",
+      "    'MQRankSum': float64 \n",
+      "    'QD': float64 \n",
+      "    'RAW_MQandDP': array<int32> \n",
+      "    'ReadPosRankSum': float64 \n",
+      "    'SOR': float64 \n",
+      "    'info': struct {\n",
       "        AC: array<int32>, \n",
       "        AF: array<float64>, \n",
       "        AN: int32, \n",
@@ -459,23 +498,203 @@
       "        RAW_MQandDP: array<int32>, \n",
       "        ReadPosRankSum: float64, \n",
       "        SOR: float64\n",
-      "    }\n",
-      "--------------------------------------------------------\n",
-      "Source:\n",
-      "    <hail.matrixtable.MatrixTable object at 0x7f2e516bb898>\n",
-      "Index:\n",
-      "    ['row']\n",
-      "--------------------------------------------------------\n"
+      "    } \n",
+      "    'n_transmitted_raw': int64 \n",
+      "    'ac_children_raw': int64 \n",
+      "    'hapmap': bool \n",
+      "    'omni': bool \n",
+      "    'kgp_phase1_hc': bool \n",
+      "    'mills': bool \n",
+      "    'nonsplit_alleles': array<str> \n",
+      "    'has_star': bool \n",
+      "    'variant_type': str \n",
+      "    'n_alt_alleles': int32 \n",
+      "    'allele_type': str \n",
+      "    'was_mixed': bool \n",
+      "    'ac_qc_samples_raw': int64 \n",
+      "    'ac_qc_samples_adj': int64 \n",
+      "    'fail_hard_filters': bool \n",
+      "    'ac_raw': int64 \n",
+      "    'transmitted_singleton': bool \n",
+      "    'feature_imputed': struct {\n",
+      "        qual: bool, \n",
+      "        AN: bool, \n",
+      "        BaseQRankSum: bool, \n",
+      "        DP: bool, \n",
+      "        END: bool, \n",
+      "        ExcessHet: bool, \n",
+      "        FS: bool, \n",
+      "        MQ: bool, \n",
+      "        MQRankSum: bool, \n",
+      "        QD: bool, \n",
+      "        ReadPosRankSum: bool, \n",
+      "        SOR: bool, \n",
+      "        n_alt_alleles: bool\n",
+      "    } \n",
+      "    'tp': bool \n",
+      "    'fp': bool \n",
+      "    'rf_train': bool \n",
+      "    'rf_label': str \n",
+      "    'rf_test': bool \n",
+      "    'rf_probability': dict<str, float64> \n",
+      "    'rf_prediction': str \n",
+      "    'consequence': str \n",
+      "    'de_novo_data': array<struct {\n",
+      "        id: str, \n",
+      "        prior: float64, \n",
+      "        proband: struct {\n",
+      "            s: str, \n",
+      "            cohort: str\n",
+      "        }, \n",
+      "        father: struct {\n",
+      "            s: str, \n",
+      "            cohort: str\n",
+      "        }, \n",
+      "        mother: struct {\n",
+      "            s: str, \n",
+      "            cohort: str\n",
+      "        }, \n",
+      "        proband_entry: struct {\n",
+      "            AD: array<int32>, \n",
+      "            DP: int32, \n",
+      "            GQ: int32, \n",
+      "            GT: call, \n",
+      "            MIN_DP: int32, \n",
+      "            PGT: call, \n",
+      "            PID: str, \n",
+      "            PL: array<int32>, \n",
+      "            PS: int32, \n",
+      "            RGQ: int32, \n",
+      "            SB: array<int32>\n",
+      "        }, \n",
+      "        father_entry: struct {\n",
+      "            AD: array<int32>, \n",
+      "            DP: int32, \n",
+      "            GQ: int32, \n",
+      "            GT: call, \n",
+      "            MIN_DP: int32, \n",
+      "            PGT: call, \n",
+      "            PID: str, \n",
+      "            PL: array<int32>, \n",
+      "            PS: int32, \n",
+      "            RGQ: int32, \n",
+      "            SB: array<int32>\n",
+      "        }, \n",
+      "        mother_entry: struct {\n",
+      "            AD: array<int32>, \n",
+      "            DP: int32, \n",
+      "            GQ: int32, \n",
+      "            GT: call, \n",
+      "            MIN_DP: int32, \n",
+      "            PGT: call, \n",
+      "            PID: str, \n",
+      "            PL: array<int32>, \n",
+      "            PS: int32, \n",
+      "            RGQ: int32, \n",
+      "            SB: array<int32>\n",
+      "        }, \n",
+      "        is_female: bool, \n",
+      "        p_de_novo: float64, \n",
+      "        confidence: str\n",
+      "    }> \n",
+      "    'family_stats': array<struct {\n",
+      "        mendel: struct {\n",
+      "            errors: int64\n",
+      "        }, \n",
+      "        tdt: struct {\n",
+      "            t: int64, \n",
+      "            u: int64, \n",
+      "            chi_sq: float64, \n",
+      "            p_value: float64\n",
+      "        }, \n",
+      "        unrelated_qc_callstats: struct {\n",
+      "            AC: array<int32>, \n",
+      "            AF: array<float64>, \n",
+      "            AN: int32, \n",
+      "            homozygote_count: array<int32>\n",
+      "        }, \n",
+      "        meta: dict<str, str>\n",
+      "    }> \n",
+      "    'variant_transmitted_singletons': int64 \n",
+      "    'variant_untransmitted_singletons': int64 \n",
+      "----------------------------------------\n",
+      "Key: ['locus', 'alleles']\n",
+      "----------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "mt.info.describe()"
+    "ht.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7c0ea942",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p>7515314 records.</p><b>variant_untransmitted_singletons</b> (<i>int64</i>):<ul><table><tbody><tr><td>Non-missing</td><td>65286 (0.87%)</td></tr><tr><td>Missing</td><td>7450028 (99.13%)</td></tr><tr><td>Minimum</td><td>0</td></tr><tr><td>Maximum</td><td>0</td></tr><tr><td>Mean</td><td>0.00</td></tr><tr><td>Std Dev</td><td>0.00</td></tr></tbody></table></ul>"
+      ],
+      "text/plain": [
+       "\n",
+       "7515314 records.\n",
+       "\n",
+       "- variant_untransmitted_singletons (int64):\n",
+       "  Non-missing: 65286 (0.87%)\n",
+       "      Missing: 7450028 (99.13%)\n",
+       "      Minimum: 0\n",
+       "      Maximum: 0\n",
+       "         Mean: 0.00\n",
+       "      Std Dev: 0.00"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ht.variant_untransmitted_singletons.summarize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3e47694a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p>7515314 records.</p><b>variant_transmitted_singletons</b> (<i>int64</i>):<ul><table><tbody><tr><td>Non-missing</td><td>65286 (0.87%)</td></tr><tr><td>Missing</td><td>7450028 (99.13%)</td></tr><tr><td>Minimum</td><td>0</td></tr><tr><td>Maximum</td><td>4</td></tr><tr><td>Mean</td><td>0.78</td></tr><tr><td>Std Dev</td><td>0.47</td></tr></tbody></table></ul>"
+      ],
+      "text/plain": [
+       "\n",
+       "7515314 records.\n",
+       "\n",
+       "- variant_transmitted_singletons (int64):\n",
+       "  Non-missing: 65286 (0.87%)\n",
+       "      Missing: 7450028 (99.13%)\n",
+       "      Minimum: 0\n",
+       "      Maximum: 4\n",
+       "         Mean: 0.78\n",
+       "      Std Dev: 0.47"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ht.variant_transmitted_singletons.summarize()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "29486769",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -501,5 +720,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
